[package]
name = "liriodendron"
license = "MIT"
version = "0.2.0"
authors = ["trapped_in_a_while_loop <pabtomas@protonmail.com>"]
edition = "2018"
description = "Procedural Pixellized 2D Textures Generator with TUI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

better-panic = "0.2.0"
chrono = "0.4.13"
crossterm = "0.17.4"
futures = "0.1.29"
image = "0.23.8"
num = "0.3.0"
radix_fmt = "1.0.0"
rand = "0.7.3"
structopt = { version = "0.3.16", default-features = false }
tokio-threadpool = "0.1.18"
tui = { version = "0.10.0", default-features = false, features = ['crossterm'] }
